# juce-cmake-tutorial-projects

./: README.md
TutorialPlugin/: .gitignore  CMakeLists.txt  README.md  TutorialPlugin.cbp
TutorialPlugin/Builds/AU/TutorialPlugin.component/Contents/: Info.plist
TutorialPlugin/Builds/VST3/TutorialPlugin.vst3/Contents/: Info.plist
TutorialPlugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
